[package]
edition      = "2024"
name         = "ble-devwallet"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "ble-devwallet"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

bt-hci = "0.8.0"
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c3"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "defmt",
  "esp-alloc",
  "esp32c3",
  "unstable",
] }
trouble-host = { version = "0.6.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
